Block Data Query Function Development